- Fix arguments of client constructor

* Fri Nov 25 2016 - version 0.7.0
- Depend on vpsadmin-client v2.6.0

- Sat Oct 22 2016 - version 0.6.0
- Depend on vpsadmin-client v2.5.0

* Mon Mar 21 2016 - version 0.5.0
- Depend on vpsadmin-client v2.3.0

* Tue Feb 09 2016 - version 0.4.0
- Depend on vpsadmin-client v2.2.0

* Sat Jan 23 2016 - version 0.3.0
- Depend on vpsadmin-client v2.1.0