@@ -7,5 +7,10 @@ module VpsFree
         super('https://api.vpsfree.cz', opts)
       end
     end
+
+    # Shortcut to {VpsFree::Client::Client.new}
+    def self.new(*args)
+      Client.new(*args)
+    end
   end
 end
