@@ -1,4 +1,5 @@
 - Fix arguments of client constructor
+- Add shortcut method VpsFree::Client.new
 
 * Fri Nov 25 2016 - version 0.7.0
 - Depend on vpsadmin-client v2.6.0
